--- a/homepage/trunk/htdocs/index.html
+++ b/homepage/trunk/htdocs/index.html
@@ -21,4 +21,8 @@ It is a Interface for Perl-Programmers to the commercial Voice-Server.
   at BerliOS</a><br>
 <a href='http://svn.berlios.de/viewcvs/cpan-teamspeak/cpan/trunk/'>Subversion
   Repository</a><br>
+<h2>PGP Fingerprints of Developer:</h2>
+<div>
+  <a href='http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x8546A6CE'
+  >maletin@cpan.org</a> D3EC:0A45:6202:E0FE:0E05:73E9:79C3:1829:8546:A6CE</div>
 </html>
