--- a/homepage/trunk/htdocs/index.html
+++ b/homepage/trunk/htdocs/index.html
@@ -10,19 +10,41 @@
 
 <body>
 <p>
-This is the Homepage of the Perl CPAN-Module Teamspeak.<br>
-It is a Interface for Perl-Programmers to the commercial Voice-Server.
+This is the Homepage of the Perl CPAN-Module Teamspeak.<br />
+It is a Interface for Perl-Programmers to the commercial Voice-Server.<br />
+At first you have to create a Teamspeak-Handle of the Type <b>Telnet</b>,
+<b>Web</b> or <b>SQL</b>.
+Next you have to <b>connect</b> to the Teamspeak-Program.
 </p>
+It depends of the type, what you can do with your Handle, but you will get the
+same Objects:
+<ul>
+  <li>Player</li>
+  <li>Server</li>
+  <li>Channel</li>
+  <li>Ban</li>
+  <li>Privileges</li>
+</ul>
+The Interface is different (depends of the Teamspeak-Handle-Type) and documented
+by <b>perldoc&nbsp;Teamspeak::Ban</b> for example.
+But you can view the Objects and Methods also as a
+<a href='http://freemind.sourceforge.net/'>FreeMind</a>-Mindmap:
+<ul>
+  <li>Here is a <a href='FreeMind.html'>HTML-Export with Javascript</a>.</li>
+  <li><a href='Teamspeak.mm'>This</a> is the FreeMind-Source.</li>
+</ul>
+
 <h2>Links</h2>
-<a href='http://www.goteamspeak.com/'>Teamspeak-Homepage</a><br>
-<a href='http://cpan.uwinnipeg.ca/search?query=Teamspeak&mode=dist'
-  >CPAN-Ditribution</a><br>
+<a href='http://www.goteamspeak.com/'>Teamspeak-Homepage</a><br />
+<a href='http://cpan.uwinnipeg.ca/search?query=Teamspeak&amp;mode=dist'
+  >CPAN-Ditribution</a><br />
 <a href='https://developer.berlios.de/projects/cpan-teamspeak/'>Project-Homepage
-  at BerliOS</a><br>
+  at BerliOS</a><br />
 <a href='http://svn.berlios.de/viewcvs/cpan-teamspeak/cpan/trunk/'>Subversion
-  Repository</a><br>
+  Repository</a><br />
 <h2>PGP Fingerprints of Developer:</h2>
 <div>
-  <a href='http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x8546A6CE'
+  <a href='http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x8546A6CE'
   >maletin@cpan.org</a> D3EC:0A45:6202:E0FE:0E05:73E9:79C3:1829:8546:A6CE</div>
+</body>
 </html>
